Name:                diagrams-ghci
Version:             0.1.0
Cabal-Version:       >= 1.8
Synopsis:            Using the Haskell interpreter to display diagrams
Category:            Graphics, GUI
Description: 
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan@gmail.com>
Stability:           experimental
Build-Type:          Simple

executable ghcdi
  Main-Is:           Main.hs
  Hs-Source-Dirs:    src
  Build-Depends:     base >= 4 && < 5,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-contrib,
                     fclabels,
                     gtk,
                     gtk-toy,
                     gtk-toy-diagrams,
                     haskell-src-exts,
                     hint,
                     marked-text,
                     mtl,
                     syb
  Other-Modules:     ActiveHs.Simple
