Name:                diagrams-ghci
Version:             0.1.0
Cabal-Version:       >= 1.8
Synopsis:            Using the Haskell interpreter to display diagrams
Category:            Graphics, GUI
Description: 
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan@gmail.com>
Stability:           experimental
Build-Type:          Simple

executable ghcdi
  Main-Is:           Main.hs
  Hs-Source-Dirs:    src
  ghc-options:       -Wall
  Build-Depends:     base >= 4 && < 5,
                     containers,
                     colour,
                     data-default,
                     diagrams-lib >= 0.6 && < 0.7,
                     diagrams-cairo,
                     diagrams-contrib,
                     fsnotify,
                     gtk,
                     gtk-toy,
                     gtk-toy-diagrams >= 0.2,
                     haskell-src-exts,
                     hint,
                     system-filepath,
                     mtl,
                     syb
  Other-Modules:     ActiveHs.Simple
                     Interpret
